test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/unknown_attr.sw
library;

#[unknown(arg_1, arg_2 = "text", arg_3 = true, arg_4 = 112233)]
pub struct Ok { }